# LilyGo-AMOLED-WebJPEG

./: .gitignore  CMakeLists.txt  README.MD  flasher-manifest.yml  keywords.txt  learnings.md  library.json  library.properties  partitions.webH264.csv  platformio.ini  sdkconfig.defaults
.github/workflows/: build-and-publish-flasher.yml  platformio.yml
docs/: manifest.json  stream.html  webrtc_stream.html
examples/: CMakeLists.txt  stream.html
examples/TFT_eSPI_Sprite/: TFT_eSPI_Sprite.ino  webrtc_stream.html  webrtc_stream_delta.html
examples/webH264/: CMakeLists.txt  README.md  h264_decode.c  h264_decode.h  h264_stream.html  idf_component.yml  webH264.cpp
examples/webJPEG/: CMakeLists.txt  README.md  qrcodegen.c  webJPEG.cpp  webJPEG.ino  webrtc_stream.html
src/: LilyGo_AMOLED.cpp
